# Phosphorus

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json  vcpkg_configuration.json
cmake/: ProjectSettings.cmake  phosphorusConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: CMakeLists.txt  playground.cpp
lib/: CMakeLists.txt
lib/include/phosphorus/: export.h  phosphorus.h
lib/include/phosphorus/core/: application.h  entry_point.h  error.h  export.h  log.h
lib/include/phosphorus/event/: event.h  events_fwd.h  key_events.h  mouse_events.h  window_events.h
lib/include/phosphorus/graphics/: window.h
lib/include/phosphorus/graphics/generic/: buffer.h  context.h  render_backend.h
lib/include/phosphorus/input/: input.h  key.h  mouse_button.h
lib/include/phosphorus/layer/: layer.h  layer_stack.h
lib/include/phosphorus/math/: angle.h  color.h  linear_algebra.h
lib/include/phosphorus/utils/: chrono.h  format.h  pimpl.h  virtual_base.h
lib/src/core/: application.cpp  error.cpp  log.cpp
lib/src/event/: key_events.cpp  mouse_events.cpp  window_events.cpp
lib/src/graphics/: window.cpp
lib/src/graphics/generic/: buffer.cpp  buffer_base.h  context.cpp  context_base.h
lib/src/graphics/opengl/: buffer.cpp  buffer.h  context.cpp  context.h
lib/src/input/: key.cpp  mouse_button.cpp
lib/src/layer/: layer_stack.cpp
